cargo-features = ["profile-rustflags"]
[package]
name = "bolt-scraper"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord_api = { path = "../discord_api" }
repl_api = { path = "../repl_api" }
util = { path = "../util" }
ascii = { path = "../ascii" }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11.13", features = ["json"] }

